# myshortcuts

./: .gitignore  CMakeLists.txt  CreateShortCut.cpp  CreateShortCut.h  README.md  ShortcutProvider.cpp  ShortcutProvider.h  build.md  cmake-build.bat  cmake-config-nmake.bat  cmake-config-win.bat  cmake-config.bat  main.cpp  myshortcuts.csv  myshortcuts.pro  np++_workspace.config
cmake-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  myshortcuts.sln  myshortcuts.vcxproj  myshortcuts.vcxproj.filters  testShortcutProvider
cmake-win/.cmake/api/v1/reply/: cache-v2-c1ddb8985c20d09fc44e.json  cmakeFiles-v1-2f80047efdf903e78f80.json  codemodel-v2-a03df4d91120067192d6.json  index-2022-04-11T04-02-35-0781.json  target-ZERO_CHECK-RelWithDebInfo-5b866997c99bcb6c0b2e.json  target-myshortcuts-Debug-eea0bfb7c71094fea345.json  target-myshortcuts-MinSizeRel-c507dc6ba9a1d24ee731.json  target-myshortcuts-RelWithDebInfo-4f49cf900b2b3ca44a9d.json  (+1 more)
cmake-win/myshortcuts.dir/Debug/: CodeAnalysisResultManifest.txt  ShortcutProvider.nativecodeanalysis.sarif  ShortcutProvider.nativecodeanalysis.xml  main.nativecodeanalysis.sarif  myshortcuts.exe.recipe  myshortcuts.ilk  vc.nativecodeanalysis.all.xml
cmake-win/myshortcuts.dir/Debug/myshortcuts.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake-win/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
cmake-win/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+7 files in other folders)
